--- a/wp-content/themes/unterschreib-jetzt/style/root.css
+++ b/wp-content/themes/unterschreib-jetzt/style/root.css
@@ -21,3 +21,7 @@ body {
 :focus {
     outline: none;
 }
+
+html.noscroll {
+    overflow-y: hidden;
+}
